Add and Finish 8.13

--- a/RedBook8th/RedBook8th.vcxproj.filters
+++ b/RedBook8th/RedBook8th.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClCompile Include="Examples\Ex08_12.cpp">
       <Filter>Examples</Filter>
     </ClCompile>
+    <ClCompile Include="Examples\Ex08_13.cpp">
+      <Filter>Examples</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GL\glcorearb.h" />
@@ -275,6 +278,9 @@
       <Filter>Examples</Filter>
     </ClInclude>
     <ClInclude Include="Examples\Ex08_12.h">
+      <Filter>Examples</Filter>
+    </ClInclude>
+    <ClInclude Include="Examples\Ex08_13.h">
       <Filter>Examples</Filter>
     </ClInclude>
   </ItemGroup>
@@ -493,6 +499,12 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Shaders\sh08_12.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\sh08_13.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\sh08_13.vert">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
