--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -115,6 +115,7 @@
     <ClCompile Include="Examples\Ex08_19.cpp" />
     <ClCompile Include="Examples\Ex08_20.cpp" />
     <ClCompile Include="Examples\Ex08_21.cpp" />
+    <ClCompile Include="Examples\Ex09_06.cpp" />
     <ClCompile Include="Examples\ExT.cpp" />
     <ClCompile Include="Examples\ExTest.cpp" />
     <ClCompile Include="GL\glLoader.c" />
@@ -172,6 +173,7 @@
     <ClInclude Include="Examples\Ex08_19.h" />
     <ClInclude Include="Examples\Ex08_20.h" />
     <ClInclude Include="Examples\Ex08_21.h" />
+    <ClInclude Include="Examples\Ex09_06.h" />
     <ClInclude Include="Examples\ExT.h" />
     <ClInclude Include="Examples\ExTest.h" />
     <ClInclude Include="GL\glcorearb.h" />
@@ -257,6 +259,10 @@
     <None Include="Shaders\shT.vert" />
     <None Include="Shaders\shTest.frag" />
     <None Include="Shaders\shTest.vert" />
+    <None Include="Shaders\simple.cont" />
+    <None Include="Shaders\simple.eval" />
+    <None Include="Shaders\simple.frag" />
+    <None Include="Shaders\simple.vert" />
     <None Include="Shaders\skybox.frag" />
     <None Include="Shaders\skybox.vert" />
     <None Include="Shaders\triangles.frag" />
