--- a/RedBook8th/RedBook8th.vcxproj.filters
+++ b/RedBook8th/RedBook8th.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClCompile Include="Examples\Ex09_06.cpp">
       <Filter>Examples</Filter>
     </ClCompile>
+    <ClCompile Include="Examples\Ex09_08.cpp">
+      <Filter>Examples</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GL\glcorearb.h" />
@@ -318,6 +321,12 @@
     </ClInclude>
     <ClInclude Include="Examples\Ex09_06.h">
       <Filter>Examples</Filter>
+    </ClInclude>
+    <ClInclude Include="Examples\Ex09_08.h">
+      <Filter>Examples</Filter>
+    </ClInclude>
+    <ClInclude Include="Shapes\Teapot.h">
+      <Filter>Shapes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -573,6 +582,18 @@
     <None Include="Shaders\simple.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\teapot.cont">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\teapot.eval">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\teapot.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\teapot.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Shaders">
@@ -583,6 +604,9 @@
     </Filter>
     <Filter Include="Auxiliary">
       <UniqueIdentifier>{01f1ec12-a041-4c0e-8a53-cc51e02303ae}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shapes">
+      <UniqueIdentifier>{bc888092-3a83-43f4-a34a-0909aff23d19}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
