--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -264,6 +264,11 @@
     <None Include="Shaders\sh08_21.frag" />
     <None Include="Shaders\sh10_07.frag" />
     <None Include="Shaders\sh10_07.vert" />
+    <None Include="Shaders\sh10_07_base.frag" />
+    <None Include="Shaders\sh10_07_base.vert" />
+    <None Include="Shaders\sh10_07_fur.frag" />
+    <None Include="Shaders\sh10_07_fur.geom" />
+    <None Include="Shaders\sh10_07_fur.vert" />
     <None Include="Shaders\shadowmap_scene.fs.glsl" />
     <None Include="Shaders\shadowmap_scene.vs.glsl" />
     <None Include="Shaders\shadowmap_shadow.fs.glsl" />
