--- a/RedBook8th/RedBook8th.vcxproj.filters
+++ b/RedBook8th/RedBook8th.vcxproj.filters
@@ -618,6 +618,21 @@
     <None Include="Shaders\sh07_lights.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\sh10_07_base.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\sh10_07_base.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\sh10_07_fur.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\sh10_07_fur.geom">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\sh10_07_fur.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Shaders">
