--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -262,8 +262,6 @@
     <None Include="Shaders\sh08_19.frag" />
     <None Include="Shaders\sh08_20.frag" />
     <None Include="Shaders\sh08_21.frag" />
-    <None Include="Shaders\sh10_07.frag" />
-    <None Include="Shaders\sh10_07.vert" />
     <None Include="Shaders\sh10_07_base.frag" />
     <None Include="Shaders\sh10_07_base.vert" />
     <None Include="Shaders\sh10_07_fur.frag" />
@@ -273,6 +271,9 @@
     <None Include="Shaders\sh10_15_render.vert" />
     <None Include="Shaders\sh10_15_sort.geom" />
     <None Include="Shaders\sh10_15_sort.vert" />
+    <None Include="Shaders\sh10_21.frag" />
+    <None Include="Shaders\sh10_21.geom" />
+    <None Include="Shaders\sh10_21.vert" />
     <None Include="Shaders\shadowmap_scene.fs.glsl" />
     <None Include="Shaders\shadowmap_scene.vs.glsl" />
     <None Include="Shaders\shadowmap_shadow.fs.glsl" />
