--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="Examples\Ex10_07.cpp" />
     <ClCompile Include="Examples\Ex10_15.cpp" />
     <ClCompile Include="Examples\Ex10_21.cpp" />
+    <ClCompile Include="Examples\Ex11_04.cpp" />
     <ClCompile Include="Examples\ExTest.cpp" />
     <ClCompile Include="GL\glLoader.c" />
     <ClCompile Include="GL\LoadShaders.cpp" />
@@ -183,6 +184,7 @@
     <ClInclude Include="Examples\Ex10_07.h" />
     <ClInclude Include="Examples\Ex10_15.h" />
     <ClInclude Include="Examples\Ex10_21.h" />
+    <ClInclude Include="Examples\Ex11_04.h" />
     <ClInclude Include="Examples\ExTest.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="GL\glLoader.h" />
@@ -192,6 +194,10 @@
     <ClInclude Include="WinApi\WinParent.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\blit.fs.glsl" />
+    <None Include="Shaders\blit.vs.glsl" />
+    <None Include="Shaders\double_write.fs.glsl" />
+    <None Include="Shaders\double_write.vs.glsl" />
     <None Include="Shaders\gouraud.frag" />
     <None Include="Shaders\gouraud.vert" />
     <None Include="Shaders\mip_filters.frag" />
