--- a/RedBook8th/RedBook8th.vcxproj.filters
+++ b/RedBook8th/RedBook8th.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="Examples\Ex11_04.cpp">
       <Filter>Examples</Filter>
     </ClCompile>
+    <ClCompile Include="Examples\Ex11_29.cpp">
+      <Filter>Examples</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GL\glcorearb.h" />
@@ -350,6 +353,9 @@
       <Filter>Examples</Filter>
     </ClInclude>
     <ClInclude Include="Examples\Ex11_04.h">
+      <Filter>Examples</Filter>
+    </ClInclude>
+    <ClInclude Include="Examples\Ex11_29.h">
       <Filter>Examples</Filter>
     </ClInclude>
   </ItemGroup>
@@ -664,6 +670,18 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Shaders\double_write.vs.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\build_lists.fs.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\build_lists.vs.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\resolve_lists.fs.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\resolve_lists.vs.glsl">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
