--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="Examples\Ex10_15.cpp" />
     <ClCompile Include="Examples\Ex10_21.cpp" />
     <ClCompile Include="Examples\Ex11_04.cpp" />
+    <ClCompile Include="Examples\Ex11_21.cpp" />
     <ClCompile Include="Examples\Ex11_29.cpp" />
     <ClCompile Include="Examples\ExTest.cpp" />
     <ClCompile Include="GL\glLoader.c" />
@@ -186,6 +187,7 @@
     <ClInclude Include="Examples\Ex10_15.h" />
     <ClInclude Include="Examples\Ex10_21.h" />
     <ClInclude Include="Examples\Ex11_04.h" />
+    <ClInclude Include="Examples\Ex11_21.h" />
     <ClInclude Include="Examples\Ex11_29.h" />
     <ClInclude Include="Examples\ExTest.h" />
     <ClInclude Include="GL\glcorearb.h" />
@@ -198,6 +200,8 @@
   <ItemGroup>
     <None Include="Shaders\blit.fs.glsl" />
     <None Include="Shaders\blit.vs.glsl" />
+    <None Include="Shaders\blit11_21.fs.glsl" />
+    <None Include="Shaders\blit11_21.vs.glsl" />
     <None Include="Shaders\build_lists.fs.glsl" />
     <None Include="Shaders\build_lists.vs.glsl" />
     <None Include="Shaders\double_write.fs.glsl" />
@@ -208,6 +212,8 @@
     <None Include="Shaders\mip_filters.vert" />
     <None Include="Shaders\object_shader.frag" />
     <None Include="Shaders\object_shader.vert" />
+    <None Include="Shaders\overdraw_count.fs.glsl" />
+    <None Include="Shaders\overdraw_count.vs.glsl" />
     <None Include="Shaders\pointsprites.fs.glsl" />
     <None Include="Shaders\pointsprites.vs.glsl" />
     <None Include="Shaders\pointsprites_sphere.fs.glsl" />
